.k3s/deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: highlight-erp-nginx-deployment
  labels:
    app: highlight-erp-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: highlight-erp-nginx
  template:
    metadata:
      labels:
        app: highlight-erp-nginx
    spec:
      imagePullSecrets:
        - name: registry-secret
      containers:
        - name: nginx
          image: registry.zennex.ru/zennex/highlight:nginx
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
