.k3s/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: highlight-erp-nginx-service
  labels:
    app: highlight-erp-nginx
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: highlight-erp-nginx
