.k3s/service-php.yaml
apiVersion: v1
kind: Service
metadata:
  name: highlight-erp-php-service
  labels:
    app: highlight-erp-php
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: php-fpm
  selector:
    app: highlight-erp-php
